--- a/app/src/main/res/drawable/ls_item_bg_pressed.xml
+++ b/app/src/main/res/drawable/ls_item_bg_pressed.xml
@@ -1,7 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
+    <corners
+        android:radius="5dp" />
     <gradient
-        android:startColor="@color/ls_bg_pressed"
-        android:endColor="@color/ls_bg_pressed"
+        android:startColor="@color/ls_bg_pressed_grad_st"
+        android:endColor="@color/ls_bg_pressed_grad_end"
         android:angle="90" />
 </shape>
