--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ls_bg">#ff0000</color>
-    <color name="ls_bg_pressed">#00ff00</color>
+    <color name="ls_bg_normal_grad_st">#555555</color>
+    <color name="ls_bg_normal_grad_end">#888888</color>
+    <color name="ls_bg_pressed_grad_st">#999999</color>
+    <color name="ls_bg_pressed_grad_end">#bbbbbb</color>
+    <color name="ls_bg">#88000000</color>
+    <color name="ls_divider">#00000000</color>
 </resources>
