--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -3,13 +3,15 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@color/colour_sch1_colour5" tools:context=".MainActivity">
 
     <Button
         android:id="@+id/ma_btn"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:text="@string/ma_btn_txt_lights_up"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        android:background="@color/colour_sch1_colour4"/>
 
 </RelativeLayout>
