Home button to opn/close nawdraw init implementation.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,4 +2,5 @@
     android:id="@+id/ma_frame"
     android:layout_height="fill_parent"
     android:layout_width="fill_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android" /> 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    />
