--- a/app/src/main/res/layout/activity_main_drawnav.xml
+++ b/app/src/main/res/layout/activity_main_drawnav.xml
@@ -11,14 +11,22 @@
         android:layout_height="match_parent" />
 
     <!-- The navigation drawer -->
-    <ListView android:id="@+id/left_drawer"
-        android:layout_width="200dp"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:padding="5dp"
-        android:layout_gravity="start"
-        android:choiceMode="singleChoice"
-        android:divider="@color/ls_divider"
-        android:dividerHeight="5dp"
-        android:background="@color/ls_bg"/>
-
+        android:orientation="vertical">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:src="@drawable/featuregraphicsv2"/>
+        <ListView android:id="@+id/left_drawer"
+            android:layout_width="200dp"
+            android:layout_height="match_parent"
+            android:padding="5dp"
+            android:layout_gravity="start"
+            android:choiceMode="singleChoice"
+            android:divider="@color/ls_divider"
+            android:dividerHeight="5dp"
+            android:background="@color/ls_bg"/>
+    </LinearLayout>
 </android.support.v4.widget.DrawerLayout>
