layout tidiet up. Seekbar will be horizontal, i give up.

--- a/app/src/main/res/layout/fragment_morse.xml
+++ b/app/src/main/res/layout/fragment_morse.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context="com.aidanas.torch.fragments.MorseFragment"
     android:padding="20dp"
-    android:background="#0000ff">
+    >
 
     <TextView
         android:id="@+id/morse_frag_transmitting_tw"
@@ -15,23 +15,41 @@
         android:layout_alignParentTop="true"
         android:inputType="none"
         android:maxLength="@integer/max_morse_length"
-        android:text="TRAMSNMITTING sample text"
+        android:hint="@string/transmitted_txt"
         />
 
     <EditText
         android:id="@+id/morse_frag_txt_to_transmit_tw"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/enter_text_to_transmit"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:inputType="textCapCharacters"
         android:maxLength="@integer/max_morse_length"
+        android:hint="@string/enter_txt_here"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/morse_frag_transmitsion_rate_sb"
+        android:text="@string/speed"
+        android:inputType="none"/>
+
+    <SeekBar
+        android:id="@+id/morse_frag_transmitsion_rate_sb"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/morse_frag_transmit_btn"
+        android:layout_marginBottom="30dp"
+        android:layout_marginTop="10dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         />
 
     <Button
         android:id="@+id/morse_frag_transmit_btn"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:padding="20dp"
         android:text="@string/transmit"
@@ -40,23 +58,4 @@
         android:background="@drawable/ls_selector"
         />
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_below="@id/morse_frag_txt_to_transmit_tw"
-        android:padding="10dp"
-        android:background="#00ff00"
-        >
-
-        <SeekBar
-            android:id="@+id/morse_frag_transmitsion_rate_sb"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:rotation="270"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:background="#ff0000"
-            />
-
-    </RelativeLayout>
 </RelativeLayout>
