--- a/app/src/main/res/layout/fragment_morse.xml
+++ b/app/src/main/res/layout/fragment_morse.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.aidanas.torch.fragments.MorseFragment"
-    android:padding="20dp"
-    android:background="#0000ff">
+    android:padding="20dp">
 
     <TextView
         android:id="@+id/morse_frag_transmitting_tw"
@@ -15,7 +14,7 @@
         android:layout_alignParentTop="true"
         android:inputType="none"
         android:maxLength="@integer/max_morse_length"
-        android:text="TRAMSNMITTING sample text"
+        android:hint="@string/enter_text_here"
         />
 
     <EditText
@@ -29,6 +28,16 @@
         android:maxLength="@integer/max_morse_length"
         />
 
+    <SeekBar
+        android:id="@+id/morse_frag_transmitsion_rate_sb"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/morse_frag_txt_to_transmit_tw"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        />
+
     <Button
         android:id="@+id/morse_frag_transmit_btn"
         android:layout_width="wrap_content"
@@ -40,23 +49,4 @@
         android:background="@drawable/ls_selector"
         />
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_below="@id/morse_frag_txt_to_transmit_tw"
-        android:padding="10dp"
-        android:background="#00ff00"
-        >
-
-        <SeekBar
-            android:id="@+id/morse_frag_transmitsion_rate_sb"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:rotation="270"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:background="#ff0000"
-            />
-
-    </RelativeLayout>
 </RelativeLayout>
