--- a/app/src/main/res/drawable/ls_selector.xml
+++ b/app/src/main/res/drawable/ls_selector.xml
@@ -2,7 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:drawable="@drawable/ls_item_bg_normal" android:state_activated="false"/>
-    <item android:drawable="@drawable/ls_item_bg_pressed" android:state_pressed="true"/>
-    <item android:drawable="@drawable/ls_item_bg_pressed" android:state_activated="true"/>
+    <item android:drawable="@drawable/ls_item_bg_pressed" android:state_pressed="true" android:state_focused="true" android:state_selected="true"
+        android:state_activated="true" />
+    <item android:drawable="@drawable/ls_item_bg_selected"/>
 
 </selector>
