--- a/app/src/main/res/drawable/ls_item_bg_selected.xml
+++ b/app/src/main/res/drawable/ls_item_bg_selected.xml
@@ -1,10 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle"
-    >
-
-    <solid
-        android:color="@color/colour_sch1_colour3" />
-
+    android:shape="rectangle">
     <corners
         android:radius="5dp" />
+    <gradient
+        android:startColor="@color/ls_bg_pressed_grad_end"
+        android:endColor="@color/ls_bg_pressed_grad_st"
+        android:angle="90" />
 </shape>
