--- a/app/src/main/res/layout/navdraw_list_item_layout.xml
+++ b/app/src/main/res/layout/navdraw_list_item_layout.xml
@@ -4,7 +4,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:background="@drawable/ls_selector">
+    android:background="@drawable/ls_selector"
+    android:descendantFocusability="blocksDescendants"
+    >
 
     <TextView
         android:id="@+id/nav_draw_item_title_tw"
