--- a/app/src/main/res/layout/fragment_morse.xml
+++ b/app/src/main/res/layout/fragment_morse.xml
@@ -24,17 +24,21 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_above="@+id/morse_frag_transmitsion_rate_sb"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="20dp"
         android:inputType="textCapCharacters"
         android:maxLength="@integer/max_morse_length"
         android:hint="@string/enter_txt_here"
         />
 
     <TextView
+        android:id="@+id/morse_frag_trans_speed_label_tw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/morse_frag_transmitsion_rate_sb"
+        android:layout_above="@+id/morse_frag_transmit_btn"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
         android:text="@string/speed"
+        android:textSize="18sp"
         android:inputType="none"/>
 
     <SeekBar
@@ -42,7 +46,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/morse_frag_transmit_btn"
-        android:layout_marginBottom="30dp"
+        android:layout_toRightOf="@id/morse_frag_trans_speed_label_tw"
+        android:layout_toEndOf="@id/morse_frag_trans_speed_label_tw"
+        android:layout_marginBottom="20dp"
         android:layout_marginTop="10dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
