--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
-<FrameLayout
-    android:id="@+id/ma_frame"
+<FrameLayout android:id="@+id/ma_frame"
     android:layout_height="fill_parent"
     android:layout_width="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    />
+    tools:context=".MainActivity"
+    xmlns:tools="http://schemas.android.com/tools" />
